# globescraper

./: Cargo.toml  README.md
.github/workflows/: build_test.yaml  build_test_publish.yaml
src/: bin.rs
src/client/: contants.rs  mod.rs
