[package]
name = "globescraper"
description = "Scraper lib for Globe Explorer AI engine"
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
eventsource-client = "0.12.2"
futures = "0.3.30"
http = "1.1.0"
map-ok = "=0.1.0"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.1"
tokio = { version = "1.38.0", features = ["full"] }
urlencoding = "2.1.3"
[dependencies.uuid]
version = "1.9.1"
features = ["v4"]

[lib]
name = "globescraper"
path = "src/lib.rs"

[[bin]]
name = "globescraper"
path = "src/bin.rs"
